--- a/Homework7/style.css
+++ b/Homework7/style.css
@@ -4,19 +4,22 @@
     box-sizing: border-box; 
 }
 
-html,body,.files {
-    height: 100%;
+.wrapper {
+    max-width: 100vw;
+    height: 100vh;
+    cursor: pointer;
 }
 
 .files {
     padding: 10px;
+    display: flex;
+    gap: 1rem;
 }
 
+
 .item {
-    display: inline-flex;
     align-items: center;
     padding: 10px;
-    margin: 5px;
     border: 1px solid gray;
     box-shadow: 0 1px 1px gray;
     border-radius: 5px;
@@ -31,9 +34,10 @@ ul {
 .selected {
     opacity: 0.4;
 }
+
 .context-menu {
     position: absolute;
-    display: inline-block;
+    display: none;
     padding: 5px 0;
     border: 1px solid gray;
     border-radius: 5px;
@@ -45,4 +49,7 @@ ul {
 .context-menu li:hover {
     background-color: gray;
     cursor: pointer;
+}
+.show{ 
+    display: inline-block;
 }
